k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: red-notes
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-health-config"}'
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
