k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: red-notes
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "red-notes-ip"
    networking.gke.io/managed-certificates: "my-certificate"
spec:
  rules:
    - host: mejfu.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
